APA > Admin > Customer & user change password issues fixed APA > Admin > Header default avatar image added and name and email added APA > Admin > Special delivery & barrier per rack changed to the single entry system APA > Store > Checkout Page crashing issue Netwurk > Admin > Frequency CRUD APA > Store > Forgot password page issues APA > Store > Search CSS issue and focus out result empty functionality APA > Store > Slider image stretch issue Netwurk > Frontend > subscriber

--- a/src/assets/CSS/parent.css
+++ b/src/assets/CSS/parent.css
@@ -26,3 +26,7 @@ select {
 .select select:focus-visible {
     border: 2px solid #f1630c;
 }
+
+.pswp__img {
+    height: auto !important;
+}
